# add-license-header

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  add-license-header.py  add_license_header.py  setup.cfg  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  lint.yml
tests/: add_license_header_test.py
