[metadata]
name = add_license_header
version = 2.0.3
description = A tool for automatically adding your license as a header in your source code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arkinmodi/add-license-header
author = Arkin Modi
author_email = arkinmodi@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = add_license_header
install_requires =
    identify
python_requires = >=3.8

[options.entry_points]
console_scripts =
    add-license-header = add_license_header:main

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false

[coverage:run]
plugins = covdefaults
